# raspberry-guardian

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  deploy.sh  state.json
.cargo/: config.toml
doc/: ARCHITECTURE.md  EXTENSIONS.md  QUICKSTART.md  RUST_REFERENCE.md  START_HERE.md
install/: readme.md
install/cmd-api/: guardian-auto  guardian-charge  guardian-discharge  guardian-status  install-cmd.sh
install/service/: battery-guardian.service  install.sh  readme.md
raw/: START_HERE.txt  battery-guardian.service  config(1).toml
src/: app_state.rs  battery.rs  config.rs  main.rs  shelly.rs  state_machine.rs  system.rs
src/api/: api_error.rs  mod.rs
